kubia-simple-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-simple-deployment
  labels:
    app: kubia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
        - name: kubia
          image: knrt10/kubia
          ports:
            - containerPort: 8080
